--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
   <groupId>SpacexGraphqlTest</groupId>
   <artifactId>SpacexGraphql_ShaftEngine</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-<properties>
+
+	<properties>
 		<!-- Make sure you point to the latest in-house version: https://automatest.jfrog.io/artifactory/SHAFT_ENGINE/io/github/mohabmohie/SHAFT_ENGINE/ -->
-		<shaft_engine.version>5.2.20210506</shaft_engine.version>
+		<shaft_engine.version>5.4.20211122-BETA</shaft_engine.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -31,8 +32,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>15</source>
-					<target>15</target>
+					<source>16</source>
+					<target>16</target>
 					<encoding>UTF-8</encoding>
 					<maxmem>10240m</maxmem>
 					<meminitial>10240m</meminitial>
@@ -46,7 +47,7 @@
 					<dependency>
 						<groupId>org.aspectj</groupId>
 						<artifactId>aspectjweaver</artifactId>
-						<version>1.9.6</version>
+						<version>1.9.8.RC2</version>
 					</dependency>
 				</dependencies>
 				<configuration>
@@ -55,7 +56,7 @@
 					<encoding>UTF-8</encoding>
 					<argLine>
 						-Dtestng.dtd.http=true
-						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.6/aspectjweaver-1.9.6.jar"
+						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.8.RC1/aspectjweaver-1.9.8.RC1.jar"
 					</argLine>
 					<properties>
 						<property>
@@ -64,7 +65,9 @@
 						</property>
 						<property>
 							<name>listener</name>
-							<value>com.shaft.tools.listeners.AlterSuiteListener,com.shaft.tools.listeners.SuiteListener,com.shaft.tools.listeners.InvokedMethodListener,com.shaft.tools.listeners.CucumberFeatureListener</value>
+							<value>
+								com.shaft.tools.listeners.AlterSuiteListener,com.shaft.tools.listeners.SuiteListener,com.shaft.tools.listeners.InvokedMethodListener,com.shaft.tools.listeners.CucumberFeatureListener
+							</value>
 						</property>
 					</properties>
 				</configuration>
