--- a/src/test/resources/Properties/Reporting.properties
+++ b/src/test/resources/Properties/Reporting.properties
@@ -2,6 +2,8 @@
 ##### SHAFT_Engine: Reporting.properties
 ###################################################
 org.slf4j.simpleLogger.defaultLogLevel=info
+captureClickedElementText=true
+captureWebDriverLogs=false
 alwaysLogDiscreetly=false
 debugMode=false
 cleanAllureResultsDirectoryBeforeExecution=true
