--- a/src/test/resources/Properties/VisualValidations.properties
+++ b/src/test/resources/Properties/VisualValidations.properties
@@ -1,6 +1,7 @@
 ###################################################
 ##### SHAFT_Engine: VisualValidations.properties
 ###################################################
+screenshotParams_scalingFactor=1
 screenshotParams_whenToTakeAScreenshot=ValidationPointsOnly
 screenshotParams_screenshotType=Regular
 screenshotParams_highlightElements=true
@@ -10,7 +11,8 @@ screenshotParams_watermark=true
 screenshotParams_watermarkOpacity=0.2
 createAnimatedGif=true
 animatedGif_frameDelay=500
-recordVideo=true
+videoParams_recordVideo=true
+videoParams_scope=DriverSession
 ###################################################
 ##### END of Properties File
 ###################################################
